@@ -133,6 +133,7 @@ foreach(filename ${OPENJPEG_DATA_IMAGES_GLOB})
   endforeach(codec_type)
   foreach(codec_type ppm bmp tif tga png)
     ADD_TEST(i2j-${filename_temp}-${codec_type} ${EXECUTABLE_OUTPUT_PATH}/image_to_j2k -i ${filename_temp}.${codec_type} -o ${filename_temp}.${codec_type}${filename_ext})
+    SET_TESTS_PROPERTIES(i2j-${filename_temp}-${codec_type} PROPERTIES DEPENDS j2i-${filename_temp}-${codec_type})
     #if(UNIX)
     #  ADD_TEST(cmp-${filename_temp}-${codec_type} cmp ${filename} ${filename_temp}.${codec_type}${filename_ext})
     #endif(UNIX)
